// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fallback to initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 20,
        "fontWeight": "700",
        "includeFontPadding": false,
        "lineHeight": 25,
        "textAlignVertical": "center",
      }
    }
  >
    UN
  </Text>
</View>
`;

exports[`should render default image 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/avatar/default.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render default image if empty name 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render default image if no gravatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render default image if no image 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render gravatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "https://www.gravatar.com/avatar/b58c6f14d292556214bd64909bcdb118?s=100&d=404",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render image 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 25,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render image as square 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 0,
      "height": 50,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 50,
    }
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 20,
        "fontWeight": "700",
        "includeFontPadding": false,
        "lineHeight": 25,
        "textAlignVertical": "center",
      }
    }
  >
    UN
  </Text>
</View>
`;
